Created new index, img, and links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
-<html>
-    <head></head>
-    <body>
-        <p>Hello, World!</p>
-        <p>My name is Kerstin</p> <!-- Change NAME to your name! -->
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kerstin Nyquist</title>
+</head>
+<body>
+    #Kerstin Nyquist
+    ###she/her/hers
+    ###Goals:
+    <ul> 
+        <li>Create a website portfolio</li> 
+        <li>Learn how to create collections within collections</li>
+    </ul>
+    <p>I'm a senior at CU Boulder studying Environmental Products of Design, Evolutionary Biology, and Computer Thinking and Design. I want to specialize in biodesign, and have background in various art media.</p>
+    <a href="./img/NyquistHeadshot.jpg">What I Look Like</a>
+    <a href="https://youtu.be/FSRlUsQ7TJ8">Great Youtube Video</a> 
+
+</body>
 </html>
