changed headers and text styles

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Kerstin Nyquist">
+    <meta name="description" content="Webpage Portfolio Development"
     <title>Kerstin Nyquist</title>
 </head>
 <body>
-    #Kerstin Nyquist
-    ###she/her/hers
-    ###Goals:
+    <h1>Kerstin Nyquist</h1>
+    <h2>she/her/hers</h2>
+    <h3>Goals:</h3>
     <ul> 
         <li>Create a website portfolio</li> 
         <li>Learn how to create collections within collections</li>
     </ul>
-    <p>I'm a senior at CU Boulder studying Environmental Products of Design, Evolutionary Biology, and Computer Thinking and Design. I want to specialize in biodesign, and have background in various art media.</p>
+    <p>I'm a senior at CU Boulder studying <em>Environmental Products of Design, Evolutionary Biology, and Computer Thinking and Design.</em> I want to specialize in <strong>biodesign,</strong>, and have background in various art media.</p>
     <a href="./img/NyquistHeadshot.jpg">What I Look Like</a>
     <a href="https://youtu.be/FSRlUsQ7TJ8">Great Youtube Video</a> 
 
