attempt at adding face and new lines

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <li>Create a website portfolio</li> 
         <li>Learn how to create collections within collections</li>
     </ul>
-    <p>I'm a senior at CU Boulder studying <em>Environmental Products of Design, Evolutionary Biology, and Computer Thinking and Design.</em> I want to specialize in <strong>biodesign,</strong>, and have background in various art media.</p>
+    <p>I'm a senior at CU Boulder studying <em>Environmental Products of Design, Evolutionary Biology, and Computer Thinking and Design.</em> I want to specialize in <strong>biodesign,</strong> and have background in various art media.</p>
     <a href="./img/NyquistHeadshot.jpg">What I Look Like</a>
-    <a href="https://youtu.be/FSRlUsQ7TJ8">Great Youtube Video</a> 
-
+    <p><a href="https://youtu.be/FSRlUsQ7TJ8">Great Youtube Video</a></p>
+    <img src="./img/NyquistHeadshot.jpg" alt="My Face">
 </body>
 </html>
