--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <p>I'm a senior at CU Boulder studying <em>Environmental Products of Design, Evolutionary Biology, and Computer Thinking and Design.</em> I want to specialize in <strong>biodesign,</strong> and have background in various art media.</p>
     <a href="./img/NyquistHeadshot.jpg">What I Look Like</a>
     <p><a href="https://youtu.be/FSRlUsQ7TJ8">Great Youtube Video</a></p>
-    <img src="./img/NyquistHeadshot.jpg" alt="My Face">
+    <img src="./img/NyquistHeadshot.jpg" alt="My Face" width="500" height="500">
 </body>
 </html>
