--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -73,7 +73,7 @@
         <figcaption>Pure black springbok</figcaption>
     </figure>
     <figure>
-        <img src="White_Springbok.png">
+        <img src="/White_Springbok.png">
         <figcaption>Pure white springbok</figcaption>
     </figure>
     <p>The three subspecies also differ in their colour. <em>A. m. angolensis</em> has a brown to tawny coat, with thick, dark brown stripes on the face extending two-thirds down to the snout. While the lateral stripe is nearly black, the stripe on the rump is dark brown. The medium brown forehead patch extends to eye level and is separated from the bright white face by a dark brown border. A brown spot is seen on the nose. <em>A. m. hofmeyri</em> is a light fawn, with thin, dark brown face stripes. The stripes on the flanks are dark brown to black, and the posterior stripes are moderately brown. The forehead patch, dark brown or fawn, extends beyond the level of the eyes and mixes with the white of the face without any clear barriers. The nose may have a pale smudge. <em>A. m. marsupialis</em> is a rich chestnut brown, with thin, light face stripes. The stripe near the rump is well-marked, and that on the flanks is deep brown. The forehead is brown, fawn, or white, the patch not extending beyond the eyes and having no sharp boundaries. The nose is white or marked with brown.[8]</p>
