fixed all pictures hopefully

--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -11,7 +11,34 @@
     <h1>Springbok</h1>
     <p>From Wikipedia, the free encyclopedia</p>
     <p><em>This article is about the antelope. For the "Springboks", see South Africa national rugby union team. For other uses, see Springbok (disambiguation).</em></p>
-
+    <figure>
+        <img src="Male_Sprinbok_Etosha_2012.jpg">
+        <figcaption>Springbok
+            Temporal range: Pleistocene–Recent 
+            Male at Etosha National Park
+            Scientific classification
+            Kingdom:	Animalia
+            Phylum:	Chordata
+            Class:	Mammalia
+            Order:	Artiodactyla
+            Family:	Bovidae
+            Subfamily:	Antilopinae
+            Tribe:	Antilopini
+            Genus:	Antidorcas
+            Species:	A. marsupialis
+            Binomial name
+            Antidorcas marsupialis
+            (Zimmermann, 1780)
+            Subspecies
+            A. m. angolensis (Blaine, 1922)
+            A. m. hofmeyri (Thomas, 1926)
+            A. m. marsupialis (Zimmermann, 1780)</figcaption>
+    </figure>
+    <figure>
+        <img src="Springbok_Map_Distribution.png">
+        <figcaption>Distribution map of springbok</figcaption>
+    </figure>
+            
     <p>The <strong>springbok</strong> (<em>Antidorcas marsupialis</em>) is a medium-sized antelope found mainly in south and southwest Africa. The sole member of the genus <em>Antidorcas</em>, this bovid was first described by the German zoologist Eberhard August Wilhelm von Zimmermann in 1780. Three subspecies are identified. A slender, long-legged antelope, the springbok reaches 71 to 86 cm (28 to 34 in) at the shoulder and weighs between 27 and 42 kg (60 and 93 lb). Both sexes have a pair of black, 35-to-50 cm (14-to-20 in) long horns that curve backwards. The springbok is characterised by a white face, a dark stripe running from the eyes to the mouth, a light-brown coat marked by a reddish-brown stripe that runs from the upper fore leg to the buttocks across the flanks like the Thomson's gazelle, and a white rump flap.</p>
 
     <p>Active mainly at dawn and dusk, springbok form harems (mixed-sex herds). In earlier times, springbok of the Kalahari desert and Karoo migrated in large numbers across the countryside, a practice known as trekbokking. A feature, peculiar but not unique, to the springbok is pronking, in which the springbok performs multiple leaps into the air, up to 2 m (6.6 ft) above the ground, in a stiff-legged posture, with the back bowed and the white flap lifted. Primarily a browser, the springbok feeds on shrubs and succulents; this antelope can live without drinking water for years, meeting its requirements through eating succulent vegetation. Breeding takes place year-round, and peaks in the rainy season, when forage is most abundant. A single calf is born after a five- to six-month-long pregnancy; weaning occurs at nearly six months of age, and the calf leaves its mother a few months later.</p>
@@ -57,7 +84,7 @@
 
     <h2>Description</h2>
     <figure>
-        <img src="/Male_Springbok_Juvenile_Horns.jpg" alt="A picture of a male with short horns, and another picture of them full grown.">
+        <img src="Male_Springbok_Juvenile_Horns.jpg" alt="A picture of a male with short horns, and another picture of them full grown.">
         <figcaption>Horn development in males juvenile (left); sub-adult (right)</figcaption>
     </figure>
 
@@ -65,15 +92,15 @@
     <p>Dark stripes extend across the white face, from the corner of the eyes to the mouth. A dark patch marks the forehead. In juveniles, the stripes and the patch are light brown. The ears, narrow and pointed, measure 15–19 cm (5.9–7.5 in). Typically light brown, the springbok has a dark reddish-brown band running horizontally from the upper foreleg to the edge of the buttocks, separating the dark back from the white underbelly. The tail (except the terminal black tuft), buttocks, the insides of the legs and the rump are all white. Two other varieties – pure black and pure white forms – are artificially selected in some South African ranches.[12] Though born with a deep black sheen, adult black springbok are two shades of chocolate-brown and develop a white marking on the face as they mature. White springbok, as the name suggests, are predominantly white with a light tan stripe on the flanks.[2][12]</p>
     <p>The three springbok varieties</p>
     <figure>
-        <img src="/Normal_Springbok.png">
+        <img src="Normal_Springbok.png">
         <figcaption>Typical springbok</figcaption>
     </figure>
     <figure>
-        <img sizes="/Black_Springbok.png">
+        <img sizes="Black_Springbok.png">
         <figcaption>Pure black springbok</figcaption>
     </figure>
     <figure>
-        <img src="/White_Springbok.png">
+        <img src="White_Springbok.png">
         <figcaption>Pure white springbok</figcaption>
     </figure>
     <p>The three subspecies also differ in their colour. <em>A. m. angolensis</em> has a brown to tawny coat, with thick, dark brown stripes on the face extending two-thirds down to the snout. While the lateral stripe is nearly black, the stripe on the rump is dark brown. The medium brown forehead patch extends to eye level and is separated from the bright white face by a dark brown border. A brown spot is seen on the nose. <em>A. m. hofmeyri</em> is a light fawn, with thin, dark brown face stripes. The stripes on the flanks are dark brown to black, and the posterior stripes are moderately brown. The forehead patch, dark brown or fawn, extends beyond the level of the eyes and mixes with the white of the face without any clear barriers. The nose may have a pale smudge. <em>A. m. marsupialis</em> is a rich chestnut brown, with thin, light face stripes. The stripe near the rump is well-marked, and that on the flanks is deep brown. The forehead is brown, fawn, or white, the patch not extending beyond the eyes and having no sharp boundaries. The nose is white or marked with brown.[8]</p>
@@ -82,7 +109,7 @@
 
     <h2>Ecology and behaviour</h2>
     <figure>
-        <img src="/Springbok_herd.jpg">
+        <img src="Springbok_herd.jpg">
         <figcaption>A herd on the road Etosha National Park, Namibia</figcaption>
     </figure>
 
@@ -93,14 +120,14 @@
     <p>A study of vigilance behaviour of herds revealed that individuals on the borders of herds tend to be more cautious, and vigilance decreases with group size. Group size and distance from roads and bushes were found to have major influence on vigilance, more among the grazing springbok than among their browsing counterparts. Adults were found to be more vigilant than juveniles, and males more vigilant than females. Springbok passing through bushes tend to be more vulnerable to predator attacks as they can not be easily alerted, and predators usually conceal themselves in bushes.[15] Another study calculated that the time spent in vigilance by springbok on the edges of herds is roughly double that spent by those in the centre and the open. Springbok were found to be more cautious in the late morning than at dawn or in the afternoon, and more at night than in the daytime. Rates and methods of vigilance were found to vary with the aim of lowering risk from predators.[16]</p>
 
     <figure>
-        <img src="/Springbok_Locking_Horns.jpg">
+        <img src="Springbok_Locking_Horns.jpg">
         <figcaption>Springbok locking horns in a fight</figcaption>
     </figure>
 
     <p>During the rut, males establish territories, ranging from 10 to 70 hectares (25 to 173 acres),[2] which they mark by urinating and depositing large piles of dung.[3] Males in neighbouring territories frequently fight for access to females, which they do by twisting and levering at each other with their horns, interspersed with stabbing attacks. Females roam the territories of different males. Outside of the rut, mixed-sex herds can range from as few as three to as many as 180 individuals, while all-male bachelor herds are of typically no more than 50 individuals. Harem and nursery herds are much smaller, typically including no more than 10 individuals.[2]</p>
 
     <figure>
-        <img src="/Springbok_Pronk.jpg">
+        <img src="Springbok_Pronk.jpg">
         <figcaption>A pronking springbok</figcaption>
     </figure>
 
@@ -115,14 +142,14 @@
 
     <h3>Diet</h3>
     <figure>
-        <img src="/Springbok_Feeding.jpg">
+        <img src="Springbok_Feeding.jpg">
         <figcaption>Springbok feed on succulent grasses.</figcaption>
     </figure>
 <p>Springbok are primarily browsers and may switch to grazing occasionally; they feed on shrubs and young succulents (such as Lampranthus species) before they lignify.[24] They prefer grasses such as Themeda triandra. Springbok can meet their water needs from the food they eat, and are able to survive without drinking water through dry season. In extreme cases, they do not drink any water over the course of their lives. Springbok may accomplish this by selecting flowers, seeds, and leaves of shrubs before dawn, when the food items are most succulent.[25] In places such as Etosha National Park, springbok seek out water bodies where they are available.[24] Springbok gather in the wet season and disperse during the dry season, unlike other African mammals.[24]</p>
 
     <h3>Reproduction</h3>
 <figure>
-    <img src="/Sprinbok_Suckling.jpg">
+    <img src="Sprinbok_Suckling.jpg">
     <figcaption>A mother suckling her offspring</figcaption>
 </figure>
 <p>Springbok mate year-round, though females are more likely to enter oestrus during the rainy season, when food is more plentiful.[13] Females are able to conceive at as early as six to seven months, whereas males do not attain sexual maturity until two years;[4] rut lasts 5 to 21 days.[12] When a female approaches a rutting male, the male holds his head and tail at level with the ground, lowers his horns, and makes a loud grunting noise to attract her. The male then urinates and sniffs the female's perineum. If the female is receptive, she urinates, as well, and the male makes a flehmen gesture, and taps his leg till the female leaves or permits him to mate.[3][26] Copulation consists of a single pelvic thrust.[27]</p>
@@ -131,7 +158,7 @@
 
 <h2>Distribution and habitat</h2>
 <figure>
-    <img src="/Etosha_Pan_Springbok.jpg">
+    <img src="Etosha_Pan_Springbok.jpg">
     <figcaption>Springboks on the Etosha pan</figcaption>
 </figure>
 <p>Springbok inhabit the dry areas of south and southwestern Africa. Their range extends from northwestern South Africa through the Kalahari desert into Namibia and Botswana. The Transvaal marks the eastern limit of the range, from where it extends westward to the Atlantic and northward to southern Angola and Botswana. In Botswana, they mostly occur in the Kalahari desert in the southwestern and central parts of the country. They are widespread across Namibia and the vast grasslands of the Free State and the shrublands of Karoo in South Africa; however, they are confined to the Namib Desert in Angola.[18]</p>
