trying to create page jumps

--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -47,7 +47,7 @@
 
     <h3>Contents</h3>
         <ol>
-            <li>Etymology</li>
+            <li><a href="#Etymology">Etymology</a></li>
             <li>Taxonomy and evolution</li>
                 <ol>
                     <li>Subspecies</li>
@@ -67,7 +67,7 @@
             <li>External links</li>
         </ol>
 
-    <h2>Etymology</h2>
+    <h2 id="Etymology">Etymology</h2>
     <p>The common name "springbok", first recorded in 1775, comes from the Afrikaans words <em>spring</em> ("jump") and <em>bok</em> ("antelope" or "goat").[2] The scientific name of the springbok is <em>Antidorcas marsupialis</em>. <em>Anti</em> is Greek for "opposite", and <em>dorcas</em> for "gazelle" – identifying the animal as not a gazelle. The specific epithet <em>marsupialis</em> comes from the Latin <em>marsupium</em> ("pocket"), and refers to a pocket-like skin flap which extends along the midline of the back from the tail,[3] which distinguishes the springbok from true gazelles.[4]</p>
 
     <h2>Taxonomy and evolution</h2>
