--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -12,7 +12,7 @@
     <p>From Wikipedia, the free encyclopedia</p>
     <p><em>This article is about the antelope. For the "Springboks", see South Africa national rugby union team. For other uses, see Springbok (disambiguation).</em></p>
     <figure>
-        <img src="Male_Sprinbok_Etosha_2012.jpg">
+        <img src="Male_Springbok_Etosha_2012.jpg">
         <figcaption>Springbok
             Temporal range: Pleistocene–Recent 
             Male at Etosha National Park
@@ -96,7 +96,7 @@
         <figcaption>Typical springbok</figcaption>
     </figure>
     <figure>
-        <img sizes="Black_Springbok.png">
+        <img src="Black_Springbok.png">
         <figcaption>Pure black springbok</figcaption>
     </figure>
     <figure>
