trying id with spaces

--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -48,7 +48,7 @@
     <h3>Contents</h3>
         <ol>
             <li><a href="#Etymology">Etymology</a></li>
-            <li>Taxonomy and evolution</li>
+            <li><a href="#Taxonomy and evolution">Taxonomy and evolution</a></li>
                 <ol>
                     <li>Subspecies</li>
                     <li>Evolution</li>
@@ -70,7 +70,7 @@
     <h2 id="Etymology">Etymology</h2>
     <p>The common name "springbok", first recorded in 1775, comes from the Afrikaans words <em>spring</em> ("jump") and <em>bok</em> ("antelope" or "goat").[2] The scientific name of the springbok is <em>Antidorcas marsupialis</em>. <em>Anti</em> is Greek for "opposite", and <em>dorcas</em> for "gazelle" – identifying the animal as not a gazelle. The specific epithet <em>marsupialis</em> comes from the Latin <em>marsupium</em> ("pocket"), and refers to a pocket-like skin flap which extends along the midline of the back from the tail,[3] which distinguishes the springbok from true gazelles.[4]</p>
 
-    <h2>Taxonomy and evolution</h2>
+    <h2 id="Taxonomy and evolution">Taxonomy and evolution</h2>
     <p>The springbok, in the family Bovidae,[5] was first described by the German zoologist Eberhard August Wilhelm von Zimmermann in 1780, who assigned the genus <em>Antilope</em> (blackbuck) to the springbok.[6] In 1845, Swedish zoologist Carl Jakob Sundevall placed the springbok as the sole living member of the genus <em>Antidorcas</em>.[7]</p>
     <h3>Subspecies</h3>
     <p>Three subspecies of <em>Antidorcas marsupialis</em> are recognised:[2][8]</p>
