fixed img spelling mistake

--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -149,7 +149,7 @@
 
     <h3>Reproduction</h3>
 <figure>
-    <img src="Sprinbok_Suckling.jpg">
+    <img src="Springbok_Suckling.jpg">
     <figcaption>A mother suckling her offspring</figcaption>
 </figure>
 <p>Springbok mate year-round, though females are more likely to enter oestrus during the rainy season, when food is more plentiful.[13] Females are able to conceive at as early as six to seven months, whereas males do not attain sexual maturity until two years;[4] rut lasts 5 to 21 days.[12] When a female approaches a rutting male, the male holds his head and tail at level with the ground, lowers his horns, and makes a loud grunting noise to attract her. The male then urinates and sniffs the female's perineum. If the female is receptive, she urinates, as well, and the male makes a flehmen gesture, and taps his leg till the female leaves or permits him to mate.[3][26] Copulation consists of a single pelvic thrust.[27]</p>
